source/templates/Network.template
AWSTemplateFormatVersion: 2010-09-09
Description: (SOCA) - Manage network & VPC creation.
Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
    Description: VPC CIDR block (eg 10.0.0.0/16 down to 10.0.0.0/24)
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-4])'
  PublicVpc:
    Type: String
    Default: true
    AllowedValues:
      - true
      - false
  ClusterId:
    Type: String
  PublicSubnetMaskBits:
    Type: String
  PrivateSubnetMaskBits:
    Type: String
  SocaLocalDomain:
    Type: String

  VpcIdParam:
    Type: String
    Description: VPC Id (must start with vpc-xxx)
    AllowedPattern: (vpc-[a-zA-Z0-9]*)|(^$)

  PrivateSubnet1Param:
    Type: String
    Description: Private Subnet (must start with subnet-xxxx)
    AllowedPattern: (subnet-[a-zA-Z0-9]*)|(^$)

  PrivateSubnet2Param:
    Type: String
    Description: Private Subnet (must start with subnet-xxxx)
    AllowedPattern: (subnet-[a-zA-Z0-9]*)|(^$)

  PrivateSubnet3Param:
    Type: String
    Description: Private Subnet (must start with subnet-xxxx)
    AllowedPattern: (subnet-[a-zA-Z0-9]*)|(^$)

  PublicSubnet1Param:
    Type: String
    Description: Public Subnet (must start with subnet-xxxx)
    AllowedPattern: (subnet-[a-zA-Z0-9]*)|(^$)

  PublicSubnet2Param:
    Type: String
    Description: Public Subnet (must start with subnet-xxxx)
    AllowedPattern: (subnet-[a-zA-Z0-9]*)|(^$)

  PublicSubnet3Param:
    Type: String
    Description: Public Subnet (must start with subnet-xxxx)
    AllowedPattern: '(subnet-[a-zA-Z0-9]*)|(^$)'
    Default: ''

  NatEIP1Param:
    Type: String
    Default: ""
    Description: NAT Public IP address for security groups

  NatEIP2Param:
    Type: String
    Default: ""
    Description: NAT Public IP address for security groups

  NatEIP3Param:
    Type: String
    Default: ""
    Description: NAT Public IP address for security groups

Conditions:
  PublicVpc: !Equals [ !Ref PublicVpc, 'true' ]

  CreateVpc: !Equals [ !Ref VpcIdParam, '' ]

  CreatePublicSubnets: !And [ {Condition: PublicVpc}, {Condition: CreateVpc} ]

  ExistingVpc: !Not [!Equals [ !Ref VpcIdParam, '' ]]

Resources:
  Vpc:
    Condition: CreateVpc
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W60
            reason: "Not enforcing VPC Flow Log. Customers are able to enable it post-launch if needed"

    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-VPC
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PublicSubnet1:
    Condition: CreatePublicSubnets
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PublicSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Public1
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PublicSubnet2:
    Condition: CreatePublicSubnets
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PublicSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Public2
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PublicSubnet3:
    Condition: CreatePublicSubnets
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PublicSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 2
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Public3
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PrivateSubnet1:
    Condition: CreateVpc
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PrivateSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Private1
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PrivateSubnet2:
    Condition: CreateVpc
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PrivateSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Private2
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  PrivateSubnet3:
    Condition: CreateVpc
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select [ 3, !Cidr [ !GetAtt Vpc.CidrBlock, 4, !Ref PrivateSubnetMaskBits ]]
      AvailabilityZone: !Select
        - 2
        - !GetAZs
          Ref: 'AWS::Region'
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-Private3
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  NatEIP:
    Condition: CreatePublicSubnets
    DependsOn: PublicSubnet1
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-NatEIP
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  NatGateway:
    Condition: CreatePublicSubnets
    DependsOn: NatEIP
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-NATGateway
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  InternetGateway:
    Condition: CreatePublicSubnets
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-InternetGateway
        - Key: soca:ClusterId
          Value: !Ref ClusterId

  VPCIGWAttachment:
    Condition: CreatePublicSubnets
    DependsOn: InternetGateway
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  PublicRouteTable:
    Condition: CreatePublicSubnets
    DependsOn: VPCIGWAttachment
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-PublicRoute

  PrivateRouteTable:
    Condition: CreateVpc
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${ClusterId}-PrivateRoute

  PublicRoute:
    Condition:
    Condition: CreatePublicSubnets
    DependsOn: PublicRouteTable
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable

  PrivateRoute:
    Condition: CreatePublicSubnets
    DependsOn: PrivateRouteTable
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateRouteTable

  PublicRouteSubnetAssociation1:
    Condition: CreatePublicSubnets
    DependsOn: PublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicRouteSubnetAssociation2:
    Condition: CreatePublicSubnets
    DependsOn: PublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PublicRouteSubnetAssociation3:
    Condition: CreatePublicSubnets
    DependsOn: PublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteSubnetAssociation1:
    Condition: CreateVpc
    DependsOn: PrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateRouteSubnetAssociation2:
    Condition: CreateVpc
    DependsOn: PrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  PrivateRouteSubnetAssociation3:
    Condition: CreateVpc
    DependsOn: PrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet3
      RouteTableId: !Ref PrivateRouteTable

  PrivateDNS:
    # Can't create query logging for private hosted zone.
    Type: AWS::Route53::HostedZone
    Properties:
      Name: !Ref SocaLocalDomain
      VPCs:
        - VPCId: !If [CreateVpc, !Ref Vpc, !Ref VpcIdParam]
          VPCRegion: !Ref 'AWS::Region'
      HostedZoneTags:
        - Key: 'soca:ClusterId'
          Value: !Ref ClusterId

  UpdateDnsLambdaRole:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W11
            reason: "Can be use with any hosted zone id"
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: UpdateDns
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DeleteLogStream
                  - logs:PutLogEvents
                Resource:
                  - !Join [ "", [ "arn:", !Ref "AWS::Partition", ":logs:", !Ref "AWS::Region", ":", !Ref  "AWS::AccountId", ":log-group:/aws/lambda/", !Ref ClusterId, "*"] ]

              - Effect: Allow
                Action:
                  - route53:ChangeResourceRecordSets
                Resource:
                  - '*'

  UpdateDnsLambda:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W89 # Lambda functions should be deployed inside a VPC
            reason: "Does not require VPC access"
          - id: W92 # Lambda functions should define ReservedConcurrentExecutions to reserve simultaneous executions
            reason: "Not required"
    Type: AWS::Lambda::Function
    Properties:
      Description: Update DNS record
      FunctionName: !Sub "${ClusterId}-UpdateDns"
      Handler: index.lambda_handler
      MemorySize: 128
      Role: !GetAtt UpdateDnsLambdaRole.Arn
      Runtime: python3.7
      Timeout: 180
      Tags:
        - Key: soca:ClusterId
          Value: !Ref ClusterId
      Code:
        ZipFile: !Sub |
          import cfnresponse
          import boto3
          import logging
          '''
          Create/delete DNS entry
          '''
          logging.getLogger().setLevel(logging.INFO)
          def lambda_handler(event, context):
            try:
              logging.info("event: {}".format(event))
              properties = event['ResourceProperties']
              expected_properties = ['Hostname', 'Domain', 'HostedZoneId', 'Type', 'Value']
              error_message = ""
              for property in expected_properties:
                try:
                  value = event['ResourceProperties'][property]
                except:
                  error_message += "Missing {} property. ".format(property)
              if error_message:
                raise KeyError(error_message)
              route53_client = boto3.client('route53')
              requestType = event['RequestType']
              if requestType in ['Create', 'Update']:
                action = 'UPSERT'
              elif requestType == 'Delete':
                action = 'DELETE'
              else:
                raise ValueError('Invalid RequestType: {}'.format(event['RequestType']))
              hostname = properties['Hostname']
              domain = properties['Domain']
              type = properties['Type']
              value = properties['Value']
              logging.info("{} {}.{} {} record, value=".format(action, hostname, type, value))
              route53_client.change_resource_record_sets(
                HostedZoneId=properties['HostedZoneId'],
                ChangeBatch={
                  'Comment': '{} {} DNS record'.format(action, hostname),
                  'Changes': [
                    {
                      'Action': action,
                      'ResourceRecordSet': {
                        'Name': "{}.{}".format(hostname, domain),
                        'Type': type,
                        'TTL': 60,
                        'ResourceRecords': [{'Value': value}]
                      }
                    }
                  ]
                }
              )
            except Exception as e:
              logging.exception(str(e))
              cfnresponse.send(event, context, cfnresponse.FAILED, {'error': str(e)}, str(e))

            cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, "{} {}.{} {}".format(properties['Type'], properties['Hostname'], properties['Domain'], properties['Value']))

  VpcFlowLogsLogGroup:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W84 # CloudWatchLogs LogGroup should specify a KMS Key Id to encrypt the log data
            reason: "Not required"
    Condition: CreateVpc
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "${ClusterId}-vpc-flow-logs"
      RetentionInDays: 3653

  VpcFlowLogsRole:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W11
            reason: "Does not support resource-level permissions"
    Condition: CreateVpc
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - !Sub "vpc-flow-logs.${AWS::URLSuffix}"
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: FlowLogs
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
                Resource:
                  - '*'

  VpcFlowLogs:
    Condition: CreateVpc
    Type: AWS::EC2::FlowLog
    Properties:
      ResourceType: VPC
      ResourceId: !Ref Vpc
      TrafficType: ALL
      MaxAggregationInterval: 60
      LogDestinationType: cloud-watch-logs
      LogDestination: !GetAtt VpcFlowLogsLogGroup.Arn
      DeliverLogsPermissionArn: !GetAtt VpcFlowLogsRole.Arn
      Tags:
        - Key: 'soca:ClusterId'
          Value: !Ref ClusterId

Outputs:
  VpcId:
    Value: !If [CreateVpc, !Ref Vpc, !Ref VpcIdParam]
  PublicSubnet1:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, !Ref PublicSubnet1, !Ref PublicSubnet1Param]
  PublicSubnet2:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, !Ref PublicSubnet2, !Ref PublicSubnet2Param]
  PublicSubnet3:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, !Ref PublicSubnet3, !Ref PublicSubnet3Param]
  PrivateSubnet1:
    Value: !If [CreateVpc, !Ref PrivateSubnet1, !Ref PrivateSubnet1Param]
  PrivateSubnet2:
    Value: !If [CreateVpc, !Ref PrivateSubnet2, !Ref PrivateSubnet2Param]
  PrivateSubnet3:
    Value: !If [CreateVpc, !Ref PrivateSubnet3, !Ref PrivateSubnet3Param]
  PrivateRouteTable:
    Value: !If [CreateVpc, !Ref PrivateRouteTable, ""]
  NatEIP1:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, !Ref NatEIP, !Ref NatEIP1Param]
  NatEIP2:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, "", !Ref NatEIP2Param]
  NatEIP3:
    Condition: PublicVpc
    Value: !If [CreatePublicSubnets, "", !Ref NatEIP3Param]
  HostedZoneId:
    Value: !Ref PrivateDNS
  UpdateDnsLambdaArn:
    Value: !GetAtt UpdateDnsLambda.Arn
